@@ -24,7 +24,7 @@ Update a directory tree with an rdup archive.\n\
 	-n\t\tdry run, do not touch the filesystem\n\
 	-V\t\tprint version\n\
 	-T\t\tshow table of contents. DIRECTORY is optional\n\
-        -u\t\tdon't create ._rdup._ with user/group information\n\
+        -u\t\tdo not create ._rdup._ with user/group information\n\
         -q\t\tsilence \'chown\' failures even when \'root\'\n\
 	-h\t\tthis help\n\
 	-v\t\tbe more verbose and print processed files to stdout\n\
